2005-03-08  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py: bah, fix other place where timestamp
	was being saved as a date string.

Tue Mar  8 14:55:42 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/flat.html doc/testing.html: fix a small formatting glitch
	  before pushing live

2005-03-07  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py:
	(ProfileStorage.get_source),
	(ProfileStorage.revert): implement.
	(run_unit_tests): yet more unit tests.
	
	* admin-tool/editorwindow.py: allow reverting to
	previous versions of the profile.

2005-03-07  Mark McLoughlin  <markmc@redhat.com>

	This commit changes the metadata format again.

	* lib/storage.py: save a timestamp rather than date
	string for each revision.
	
	* admin-tool/editorwindow.py: format the timestamp
	according to the locale.
	
	* lib/util.py:
	(init_gettext): call setlocale()

Mon Mar  7 16:08:23 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/Makefile.am: added validation of output pages on rebuild
	  and package them in the distrib
	* sabayon.spec.in: add the web informations as documentation

Mon Mar  7 15:45:12 CET 2005 Daniel Veillard <veillard@redhat.com>

	* Makefile.am configure.ac doc/Makefile.am: integrating the doc
	  subdir with the site/doc informations. The "make rebuild" target
	  rebuilds the web site
	* doc/brownbar.jpg doc/brownbarTop.jpg doc/sabayon.css doc/shadow.gif
	  doc/title01.jpg doc/title02.jpg: new web site design from
	  Diana Fong and Bryan Clark
	* TODO site.xsl flat.html: converted the web site generation to
	  a raw content flat file and an XSLT stylesheet generating the
	  html pages. Separation of content and presentation, except the
	  content of the boxes on the left is contained in the stylesheet,
	  but they should stll be easy to maintain.

2005-03-07  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: add a combo to allow
	selecting the profile revision.
	
	* lib/storage.py: