@@ -1,5 +1,11 @@
 2005-03-08  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/editorwindow.py: add a combo box for each
+	element in the list to allow you to revert to previous
+	versions of files or directories.
+
+2005-03-08  Mark McLoughlin  <markmc@redhat.com>
+
 	* lib/storage.py: bah, fix other place where timestamp
 	was being saved as a date string.
 
